<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">camera</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="IP"> </string>
    <string name="Port"> </string>
    <string name="IP1">1</string>
    <string name="IP2">2</string>
    <string name="IP3">3</string>
    <string name="Cam_Dir">Cam Dir</string>
    <string name="Connect">Connect</string>
    <string name="testtext">test text</string>
</resources>