<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="290dp" />

    <TextView
        android:id="@+id/testtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dip"
        android:gravity="center_horizontal"
        android:text="@string/testtext" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dip"
        android:id="@+id/textview_message"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="36dp"
        android:layout_width="match_parent">

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_play"
            android:id="@+id/button_play"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/button_play"/>

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_stop"
            android:id="@+id/button_stop"
            android:src="@android:drawable/ic_media_pause"
            android:contentDescription="@string/button_stop"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textview_time"
            android:layout_marginRight="5dip"
            android:layout_marginLeft="5dip"
            android:layout_gravity="center_vertical"/>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:indeterminate="false"
            android:visibility="invisible" />
    </LinearLayout>

    <com.test.camera.GStreamerSurfaceView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surface_video"
    />

</LinearLayout>